--- a/app/index.html
+++ b/app/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <title>IonicGulpSeed</title>
+    <title>Music App</title>
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
     <meta name="format-detection" content="telephone=no">
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB16sGmIekuGIvYOfNoW9T44377IU2d2Es"></script>
 
     <!-- inject:app-styles:css --><!-- endinject -->
 </head>
-<body ng-app="IonicGulpSeed">
+<body ng-app="MusicApp">
 
 <ion-nav-view></ion-nav-view>
 
